codepkg/objects/Agency_Special_Equipment__c.object
<CustomObject>
    <fields>
        <fullName>Agency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agency</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Agency Special Equipments</relationshipLabel>
        <relationshipName>Agency_Special_Equipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Approval_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MACS_ID__c</fullName>
        <formula>Agency__r.MACS_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MACS ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reject_Reason__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Reject Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revised_From_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Revised From Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <label>Agency Special Equipment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Agency__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Approval_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>MARS_SpecialEquipment_Agency_Special_Equipment</fullName>
        <filterScope>Queue</filterScope>
        <label>MARS_SpecialEquipment</label>
        <queue>MARS_SpecialEquipment</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Pending_Approval_Queue</fullName>
        <columns>MACS_ID__c</columns>
        <columns>Agency__c</columns>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Approval_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Pending Review</value>
        </filters>
        <label>Pending Review Queue</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Special Equipment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agency Special Equipments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>